# django4-blogapp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
blongo/: manage.py
blongo/blog/: forms.py  models.py  urls.py  views.py
blongo/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment_comment_blog_commen_created_0e6ed4_idx.py
blongo/blog/templates/blog/post/: detail.html  list.html
blongo/blongo/: asgi.py  settings.py  urls.py  wsgi.py
