[tool.poetry]
name = "boiler-plate django.."
version = "0.1.0"
description = "testing boilerplate"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38","py39","py310"]

[tool.isort]
py_version = 38
profile = "black"
line_length = 79
multi_line_output = 1
use_parentheses = true
include_trailing_comma = true

[tool.pyright]
python = "3.8"  # Specify your desired Python version
reportMissingImports = true  # Report missing imports as errors
venvPath = ".venv"  # Path to your virtual environment, if applicable
