[tool.poetry]
name = "django4-blogapp"
version = "0.1.0"
description = "This is a simple blogapp written with django4"
authors = ["sayanjit <sayanjitgit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.1.0,<4.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
pre-commit = "^3.4.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py38","py39","py310"]
extend-exclude = """
/(
  | templates/*
  | media/*
  | migrations/
) /
"""

[tool.isort]
py_version = 310
profile = "black"
line_length = 79
multi_line_output = 1
use_parentheses = true
include_trailing_comma = true
skip_glob = [
    "media/",
    "template/",
    "migrations"
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "normal"

[tool.pyright]
python = "3.10"  # Specify your desired Python version
reportMissingImports = true  # Report missing imports as errors
venvPath = ".venv"  # Path to your virtual environment, if applicable
